multiselect fixed legend one more row on each island fixed marker size toggle export range visibility show current time

--- a/custom.css
+++ b/custom.css
@@ -187,3 +187,7 @@ html, body,  #map{
     background-color: rgba(0,0,0,.5);
     -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
 }
+
+.multiselect-container {
+    width: 300px;
+}
